--- a/packages/nimbus/templates/project/dotfiles/gitignore.ejs
+++ b/packages/nimbus/templates/project/dotfiles/gitignore.ejs
@@ -42,6 +42,7 @@ babel.config.js
 jest.config.js
 prettier.config.js
 tsconfig.json
+tsconfig.eslint.json
 tsconfig.options.json
 webpack.config.js
 *.tsbuildinfo
