--- a/packages/nimbus/templates/project/dotfiles/npmignore.ejs
+++ b/packages/nimbus/templates/project/dotfiles/npmignore.ejs
@@ -45,6 +45,7 @@ dangerfile.ts
 jest.config.js
 prettier.config.js
 tsconfig.json
+tsconfig.eslint.json
 tsconfig.options.json
 webpack.config.js
 *.tsbuildinfo
