Fix config file.

--- a/packages/nimbus/templates/project/dotfiles/gitignore.ejs
+++ b/packages/nimbus/templates/project/dotfiles/gitignore.ejs
@@ -11,12 +11,12 @@ logs/
 # Cache
 .axe/
 .bundle/
-.eslintcache/
 .happo/
 .idea/
 .npm/
 .vagrant/
 .vscode/
+.eslintcache
 .yarnclean
 
 # Directories
